syntax = "proto3";
package abag.quasarnode.osmolpv;

option go_package = "github.com/abag/quasarnode/x/osmolpv/types";
import "gogoproto/gogo.proto"; 
import "cosmos/base/v1beta1/coin.proto"; 
import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";

// GaugeLockInfo object is used to save the lockup period, associated approx apy
// and state whether it is active, and start time of this gauge to check the expected aPY
// on any given day. Multiple gaugeLockInfo objects will be associated with each LPPosition
message GaugeLockInfo {
  uint64 gaugeID = 1;
  bool isActive = 2;
  google.protobuf.Duration lockupDuration = 3 [
    (gogoproto.nullable) = false,
    (gogoproto.stdduration) = true,
    (gogoproto.jsontag) = "duration,omitempty",
    (gogoproto.moretags) = "yaml:\"duration\""
  ];
  string expectedApy = 4 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.moretags) = "yaml:\"apy\"",
    (gogoproto.nullable) = false
  ];
  google.protobuf.Timestamp startTime = 5 [
    (gogoproto.stdtime) = true,
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"startTime\""
  ];
}

// LpPosition is used by the strategy during the the Lping activity. 
// Whenever orion module creates an LP position; an object of LpPosition will be created 
// for book keeping in the KV store.
message LpPosition {
  uint64 lpID = 1; 
  uint64 lockID = 2; 
  bool isActive = 3;
  google.protobuf.Timestamp startTime = 4 [
    (gogoproto.stdtime) = true,
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"startTime\""
  ];
  uint64 bondingStartEpochDay = 5; 
  uint64 bondDuration = 6; 
  uint64 unbondingStartEpochDay = 7; 
  uint64 unbondingDuration = 8; 
  uint64 poolID = 9; 
  cosmos.base.v1beta1.Coin lptoken = 10;
  repeated cosmos.base.v1beta1.Coin coins = 11 [(gogoproto.nullable) = false]; 
  repeated GaugeLockInfo gaugelocks  = 12;
  
}
